# test_task_ecom

./: .gitignore  Makefile  README.md  db_data.json  pyproject.toml  requirements.txt
service/: db.py  main.py  tests.py  utils.py  validators.py  views.py
tests/: test_main.py  test_service.py  test_utils.py  test_views.py
